--- a/src/path_follower/package.xml
+++ b/src/path_follower/package.xml
@@ -41,17 +41,22 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>robot_mechanism_controllers</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>robot_mechanism_controllers</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <!--exec_depend>message_generation</exec_depend-->
 
 
   <!-- The export tag contains other, unspecified, tags -->
